Add comprehensive test coverage and modernize code - all tests passing, fully functional